fixed button align at start-hosting page

--- a/start-hosting/style.css
+++ b/start-hosting/style.css
@@ -11,6 +11,8 @@ main {
 .signup-form {
     padding: 1rem;
     display: grid;
+    grid-auto-rows: 2rem;
+    grid-row-gap: 0.5rem;
 }
 
 .signup-form label {
@@ -80,6 +82,10 @@ main {
     color: #a1a1a1;
 }
 
+.button {
+    margin: 0 !important;
+}
+
 @media (min-width: 40rem) {
     .signup-form {
         margin: auto;
@@ -87,6 +93,10 @@ main {
         grid-template-columns: 10rem auto;
         grid-row-gap: 1rem;
         grid-column-gap: 0.5rem;
+    }
+
+    .signup-form [id="title"] {
+        grid-column: span 2;
     }
 
     .signup-form__ckeckbox {
